# nouveau_rss

./: .gitignore  Dockerfile  PRD.md  pyproject.toml  render.yaml  seed_sites.py  start.sh
src/rss_mcp/: fetcher.py  server.py  storage.py
tests/: test_fetcher.py  test_mcp_tools.py  test_playwright.py  test_refresh.py  test_storage.py
